@@ -1,7 +1,7 @@
 //*************************************************************************
 // BCMenu.cpp : implementation file
-// Version : 3.034
-// Date : May 2002
+// Version : 3.036
+// Date : June 2005
 // Author : Brent Corkum
 // Email :  corkum@rocscience.com
 // Latest Version : http://www.rocscience.com/~corkum/BCMenu.html
@@ -1029,7 +1029,7 @@ BOOL BCMenu::AppendODMenuA(LPCSTR lpstrText,UINT nFlags,UINT nID,
 }
 
 
-BOOL BCMenu::AppendODMenuW(wchar_t *lpstrText,UINT nFlags,UINT nID,
+BOOL BCMenu::AppendODMenuW(const wchar_t *lpstrText,UINT nFlags,UINT nID,
                            int nIconNormal)
 {
 	// Add the MF_OWNERDRAW flag if not specified:
@@ -1080,7 +1080,7 @@ BOOL BCMenu::AppendODMenuA(LPCSTR lpstrText,UINT nFlags,UINT nID,
 	return AppendODMenuW(A2W(lpstrText),nFlags,nID,il,xoffset);
 }
 
-BOOL BCMenu::AppendODMenuW(wchar_t *lpstrText,UINT nFlags,UINT nID,
+BOOL BCMenu::AppendODMenuW(const wchar_t *lpstrText,UINT nFlags,UINT nID,
                            CImageList *il,int xoffset)
 {
 	// Add the MF_OWNERDRAW flag if not specified:
@@ -1387,7 +1387,6 @@ BOOL BCMenu::ModifyODMenuW(wchar_t *lpstrText,wchar_t *OptionText,
 	BCMenuData *mdata;
 	
 	// Find the old BCMenuData structure:
-	CString junk=OptionText;
 	mdata=FindMenuOption(OptionText);
 	if(mdata){
 		if(lpstrText)
@@ -1411,6 +1410,60 @@ BOOL BCMenu::ModifyODMenuW(wchar_t *lpstrText,wchar_t *OptionText,
 	}
 	return(FALSE);
 }
+
+BOOL BCMenu::SetImageForPopupFromToolbarA (const char *strPopUpText, UINT toolbarID, UINT command_id_to_extract_icon_from)
+{
+	USES_CONVERSION;
+	return SetImageForPopupFromToolbarW(A2W(strPopUpText),toolbarID,command_id_to_extract_icon_from);
+}
+BOOL BCMenu::SetImageForPopupFromToolbarW (wchar_t *strPopUpText, UINT toolbarID, UINT command_id_to_extract_icon_from)
+{
+	CWnd* pWnd = AfxGetMainWnd();
+	if (pWnd == NULL)pWnd = CWnd::GetDesktopWindow();
+
+	CToolBar bar;
+	bar.Create(pWnd);
+
+	if(bar.LoadToolBar(toolbarID)){
+		BCMenuData *mdata = FindMenuOption(strPopUpText);
+		if (mdata != NULL)
+		{
+			if (mdata->bitmap != NULL){
+				mdata->bitmap->DeleteImageList();
+				delete mdata->bitmap;
+				mdata->bitmap=NULL;
+			}
+			CImageList imglist;
+			imglist.Create(m_iconX,m_iconY,ILC_COLORDDB|ILC_MASK,1,1);
+
+			if(AddBitmapToImageList (&imglist, toolbarID)){
+				int ind = bar.CommandToIndex (command_id_to_extract_icon_from);
+				if (ind < 0) { return FALSE; }
+				
+				UINT dummyID, dummyStyle;
+				int image_index;
+				bar.GetButtonInfo (ind, dummyID, dummyStyle, image_index);
+				ASSERT (dummyID == command_id_to_extract_icon_from);
+				
+				mdata->bitmap = new CImageList;
+				mdata->bitmap->Create(m_iconX,m_iconY,ILC_COLORDDB|ILC_MASK,0,1);
+				mdata->bitmap->Add (imglist.ExtractIcon (image_index));
+
+				mdata->menuIconNormal = toolbarID;
+				mdata->xoffset = 0;
+				
+				return TRUE;
+			}
+			else{
+				mdata->menuIconNormal = -1;
+				mdata->xoffset = -1;
+			}
+		}
+	}
+
+	return FALSE;
+}
+
 
 BCMenuData *BCMenu::NewODMenu(UINT pos,UINT nFlags,UINT nID,CString string)
 {
@@ -2449,7 +2502,7 @@ BOOL BCMenu::DrawXPCheckmark(CDC *dc, const CRect& rc, HBITMAP hbmCheck,COLORREF
 	brushin.DeleteObject();
 	dc->Draw3dRect (rc,colorout,colorout);
 
-	if (!hbmCheck)DrawCheckMark(dc,rc.left+dx,rc.top+dy,GetSysColor(COLOR_MENUTEXT),TRUE);
+	if (!hbmCheck)DrawCheckMark(dc,rc.left+dx,rc.top+dy,GetSysColor(COLOR_MENUTEXT));
 	else DrawRadioDot(dc,rc.left+dx,rc.top+dy,GetSysColor(COLOR_MENUTEXT));
 	return TRUE;
 }
@@ -2535,20 +2588,28 @@ BOOL BCMenu::GetDisableOldStyle(void)
 
 WORD BCMenu::NumBitmapColors(LPBITMAPINFOHEADER lpBitmap)
 {
-	if ( lpBitmap->biClrUsed != 0)
-		return (WORD)lpBitmap->biClrUsed;
-	
-	switch (lpBitmap->biBitCount){
-		case 1:
-			return 2;
-		case 4:
-			return 16;
-		case 8:
-			return 256;
-		default:
-			return 0;
+	WORD returnval = 0;
+
+	if ( lpBitmap->biClrUsed != 0){
+		returnval=(WORD)lpBitmap->biClrUsed;
 	}
-	return 0;
+	else{
+		switch (lpBitmap->biBitCount){
+			case 1:
+				returnval=2;
+				break;
+			case 4:
+				returnval=16;
+				break;
+			case 8:
+				returnval=256;
+				break;
+			default:
+				returnval=0;
+				break;
+		}
+	}
+	return returnval;
 }
 
 HBITMAP BCMenu::LoadSysColorBitmap(int nResourceId)
@@ -2702,7 +2763,7 @@ BOOL BCMenu::AppendMenuA(UINT nFlags,UINT nIDNewItem,const char *lpszNewItem,int
 	return AppendMenuW(nFlags,nIDNewItem,A2W(lpszNewItem),nIconNormal);
 }
 
-BOOL BCMenu::AppendMenuW(UINT nFlags,UINT nIDNewItem,wchar_t *lpszNewItem,int nIconNormal)
+BOOL BCMenu::AppendMenuW(UINT nFlags,UINT nIDNewItem,const wchar_t *lpszNewItem,int nIconNormal)
 {
 	return AppendODMenuW(lpszNewItem,nFlags,nIDNewItem,nIconNormal);
 }
@@ -2713,7 +2774,7 @@ BOOL BCMenu::AppendMenuA(UINT nFlags,UINT nIDNewItem,const char *lpszNewItem,CIm
 	return AppendMenuW(nFlags,nIDNewItem,A2W(lpszNewItem),il,xoffset);
 }
 
-BOOL BCMenu::AppendMenuW(UINT nFlags,UINT nIDNewItem,wchar_t *lpszNewItem,CImageList *il,int xoffset)
+BOOL BCMenu::AppendMenuW(UINT nFlags,UINT nIDNewItem,const wchar_t *lpszNewItem,CImageList *il,int xoffset)
 {
 	return AppendODMenuW(lpszNewItem,nFlags,nIDNewItem,il,xoffset);
 }
@@ -2724,7 +2785,7 @@ BOOL BCMenu::AppendMenuA(UINT nFlags,UINT nIDNewItem,const char *lpszNewItem,CBi
 	return AppendMenuW(nFlags,nIDNewItem,A2W(lpszNewItem),bmp);
 }
 
-BOOL BCMenu::AppendMenuW(UINT nFlags,UINT nIDNewItem,wchar_t *lpszNewItem,CBitmap *bmp)
+BOOL BCMenu::AppendMenuW(UINT nFlags,UINT nIDNewItem,const wchar_t *lpszNewItem,CBitmap *bmp)
 {
 	if(bmp){
 		CImageList temp;
@@ -2778,7 +2839,7 @@ BOOL BCMenu::InsertMenuW(UINT nPosition,UINT nFlags,UINT nIDNewItem,wchar_t *lps
 
 //--------------------------------------------------------------------------
 //[21.06.99 rj]
-BCMenu* BCMenu::AppendODPopupMenuW(wchar_t *lpstrText)
+BCMenu* BCMenu::AppendODPopupMenuW(const wchar_t *lpstrText)
 {
 	BCMenu* pSubMenu = new BCMenu;
 	pSubMenu->m_unselectcheck=m_unselectcheck;
@@ -3164,4 +3225,104 @@ int BCMenu::AddToGlobalImageList(CImageList *il,int xoffset,int nID)
 		::DestroyIcon(hIcon);
 	}
 	return(loc);
+}
+
+bool BCMenu::AppendMenu (BCMenu* pMenuToAdd, bool add_separator /*= true*/, int num_items_to_remove_at_end /*= 0*/)
+{
+	// Appends a new menu to the end of existing menu.
+	//
+	// If 'add_separator' is true, adds separator before appending another menu.
+	// separator will not be added if the original menu is empty or if the last
+	// item already is a separator.
+	//
+	// If 'num_items_to_remove_at_end' is greater than 0, removes a specified
+	// number of menu option from the end of original menu before appending
+	// new menu. Removal of items is done before adding a separator (add_separator flag)
+
+	// Original code from http://www.codeproject.com/menu/mergemenu.asp
+	// Posted by Oskar Wieland on Nov 16, 2001
+	//
+	// Modified and added to BCMenu by Damir Valiulin on 2004-12-10:
+	//   * Modified to account for BCMenu's owner-drawn stuff.
+	//   * Made adding a separator optional
+	//   * Added an option to remove a few items from original menu before appending
+	//   * Removed bTopLevel stuff because I didn't test it.
+
+	// Sanity checks
+	if (pMenuToAdd == NULL || !pMenuToAdd->IsKindOf (RUNTIME_CLASS(BCMenu))){
+		ASSERT(FALSE);
+		return false;
+	}
+
+	// Anything to add?
+	int iMenuAddItemCount = pMenuToAdd->GetMenuItemCount();
+	if( iMenuAddItemCount == 0 )
+		return true;
+
+	// Delete last few items from the menu if specified
+	if (num_items_to_remove_at_end > 0){
+		int original_num_menu_items = GetMenuItemCount();
+		if (original_num_menu_items >= num_items_to_remove_at_end)
+		{
+			int first_delete_item = original_num_menu_items - 1;
+			int last_delete_item = original_num_menu_items - num_items_to_remove_at_end;
+			for (int i=first_delete_item; i>=last_delete_item; i--){
+				if (!DeleteMenu (i, MF_BYPOSITION)){
+					ASSERT(FALSE); // Something went wrong, but not so critical to abort everything. Just stop deleting items.
+					break;
+				}
+			}
+		}else{
+			ASSERT(FALSE); // Number of items to delete is greater than existing number of menu items!
+		}
+	}
+
+	// Append a separator if existing menu has any items already and last item is not separator
+	if (add_separator && GetMenuItemCount() > 0){
+		if (MF_SEPARATOR != (MF_SEPARATOR & GetMenuState (GetMenuItemCount()-1, MF_BYPOSITION))){
+			AppendMenu(MF_SEPARATOR);
+		}
+	}
+
+	// Iterate through the top level of menu to add
+	for (int iLoop = 0; iLoop < iMenuAddItemCount; iLoop++ )
+	{
+		// Get the menu string from the add menu
+		CString sMenuAddString;
+		pMenuToAdd->GetMenuText( iLoop, sMenuAddString, MF_BYPOSITION );
+
+		// Try to get the sub-menu of the current menu item
+		BCMenu* pSubMenu = (BCMenu*)pMenuToAdd->GetSubMenu(iLoop);
+
+		// Check if we have a sub menu
+		if (!pSubMenu)
+		{
+			// Normal menu item
+
+			// Read the source and append at the destination
+			UINT nState = pMenuToAdd->GetMenuState( iLoop, MF_BYPOSITION );
+			UINT nItemID = pMenuToAdd->GetMenuItemID( iLoop );
+
+			if (!AppendMenu( nState, nItemID, sMenuAddString )){
+				ASSERT(FALSE); //TRACE( "MergeMenu: AppendMenu failed!\n" );
+				return false;
+			}
+		}
+		else
+		{
+			// Create a new pop-up menu and insert sub-menu's items into it
+			BCMenu* pNewPopupMenu = AppendODPopupMenu (sMenuAddString);
+			if (pNewPopupMenu == NULL){
+				ASSERT(FALSE); //TRACE( "MergeMenu: CreatePopupMenu failed!\n" );
+				return false;
+			}
+
+			// Add items to new pop-up recursively
+			if (! pNewPopupMenu->AppendMenu (pSubMenu, false, 0)){
+				return false;
+			}
+		}
+	}
+
+	return true;
 }
